TestGCEventMixedWithG1ConcurrentMark.java fails after JDK-8134953

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b89
    • Verified

        See JDK-8139275 for more details.

        G1 young GCs initiate the concurrent marking cycle. Events sent to indicate the concurrent cycle start should use the concurrent thread's GC id not the young GC thread's id.

              Assignee:
              Bengt Rutisson (Inactive)
              Reporter:
              Bengt Rutisson (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: