8139293: TestGCEventMixedWithG1ConcurrentMark.java fails after JDK-8134953

Reviewed-by: ecaspole, jwilhelm